--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notas de Amor - ¡Mensajes con corazón!</title>
+    <title>Notas de Amor - ¡Wiwi!</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -77,6 +77,12 @@
                 <button @click="surpriseMe" class="btn btn-gradient-4 ms-2 px-4 py-2 shadow-fun">
                     <i class="fas fa-random me-2"></i> ¡Sorpréndeme!
                 </button>
+            </div>
+
+            <div class="dedicatoria-especial text-center mt-4">
+                <h2 class="fun-title">Dedicatoria Especial</h2>
+                <p class="fun-message">Jhosselin, cada día contigo es un regalo que atesoro. Eres la luz que ilumina mi vida y el amor que llena mi corazón.</p>
+                <p class="fun-signature">Tu eterno admirador</p>
             </div>
         </div>
     </div>
